# ferienakademie_preparation_playground

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp  window_module.cpp  window_module.h
